changed the size of the data table in mobile mode to make sure that the quarters don't wrap into a new line

--- a/styles.css
+++ b/styles.css
@@ -335,7 +335,7 @@ text-align: center;
 
     div.table-title {
         margin: 0;
-        width: 322px;
+        width: 335px;
     }
 
     .text-left {
